--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Bike-admin</title>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=4gV7vtdZsPcAUAEOKB5smnOxHLa4gFMt"></script>
   </head>
   <body>
     <noscript>
